# ZaMP

./: README.md
etap1/program/: Makefile  interp
etap2/program/: Makefile  interp
etap2/program_interpreter/: polecenia.cmd  (+1 more)
etap4/package-interp4cmds/inc/: Interp4Move.hh  Interp4Set.hh  LibInterface.hh  Makefile  Makefile.am  Makefile.in  MobileObj.hh  Set4LibInterfaces.hh
etap4/package-interp4cmds/src-lib/: Interp4Move.cpp  Interp4Set.cpp  Makefile  Makefile.am  Makefile.in  libInterp4Move.la  libInterp4Move_la-Interp4Move.lo  libInterp4Pause.la  libInterp4Pause_la-Interp4Pause.lo  libInterp4Rotate.la  libInterp4Rotate_la-Interp4Rotate.lo  libInterp4Set.la  libInterp4Set_la-Interp4Set.lo  libMove.la  libMove_la-Interp4Move.lo  libPause.la  libPause_la-Interp4Pause.lo  libRotate.la  libRotate_la-Interp4Rotate.lo  libSet.la  libSet_la-Interp4Set.lo
etap4/package-interp4cmds/src-lib/.deps/: libInterp4Move_la-Interp4Move.Plo  libInterp4Pause_la-Interp4Pause.Plo  libInterp4Rotate_la-Interp4Rotate.Plo  libInterp4Set_la-Interp4Set.Plo  libMove_la-Interp4Move.Plo  libPause_la-Interp4Pause.Plo  libRotate_la-Interp4Rotate.Plo  libSet_la-Interp4Set.Plo  tool.Plo
etap4/package-interp4cmds/src-lib/.libs/: libInterp4Move.lai  libInterp4Move.so.1.0.0  libInterp4Pause.lai  libInterp4Pause.so.1.0.0  libInterp4Rotate.lai  libInterp4Rotate.so.1.0.0  libInterp4Set.lai  libInterp4Set.so.1.0.0  libMove.la  libMove.lai  libMove.so.1  libMove.so.1.0.0  libPause.la  libPause.lai  libPause.so.1.0.0  libRotate.la  libRotate.lai  libRotate.so.1.0.0  libSet.la  libSet.lai  libSet.so.1.0.0
(+640 files in other folders)
