noinst_HEADERS= AccessControl.hh\
		LibInterface.hh\
		Set4LibInterfaces.hh\
		Configuration.hh\
		Vector3D.hh\
		Cuboid.hh\
		Port.hh\
                xmlinterp.hh\
		geomVector.hh\
		ProgramInterpreter.hh\
		Interp4Command.hh\
		MobileObj.hh\
		Scene.hh\
		Interp4Move.hh\
		Interp4Rotate.hh\
		Interp4Set.hh\
		Interp4Pause.hh

