lib_LTLIBRARIES = libMove.la libPause.la libRotate.la libSet.la
libMove_la_SOURCES = Interp4Move.cpp
libMove_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libPause_la_SOURCES = Interp4Pause.cpp
libPause_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libRotate_la_SOURCES = Interp4Rotate.cpp
libRotate_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libSet_la_SOURCES = Interp4Set.cpp
libSet_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libMove_la_LDFLAGS = -module -version-info 1:0:0
libPause_la_LDFLAGS = -module -version-info 1:0:0
libRotate_la_LDFLAGS = -module -version-info 1:0:0
libSet_la_LDFLAGS = -module -version-info 1:0:0
